--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
+.Bg-ColorBgGreen {
+  background-color: #ECEDE6; }
+
 .type-light {
   font-weight: 300; }
 
@@ -23,13 +26,65 @@
 .type-xlg {
   font-size: 48px; }
 
+.color-black {
+  color: #0D270B; }
+
+.color-white {
+  color: #f4f4f4; }
+
+.color-grey {
+  color: #ffffff68; }
+
+.color-green {
+  color: #759A4A; }
+
+.color-LightGreen {
+  color: #a8df77; }
+
+.color-bgGreen {
+  color: #ECEDE6; }
+
 section {
   margin: auto;
   max-width: 1080px;
-  height: auto; }
+  height: auto;
+  margin-top: 120px; }
+
+a {
+  color: #0D270B;
+  text-decoration: none; }
+  a:active {
+    color: #0D270B;
+    text-decoration: none; }
+  a:hover {
+    color: #0D270B;
+    text-decoration: none; }
+  a:focus {
+    text-decoration: none; }
+
+.miBoton {
+  padding: 0.5rem 2rem;
+  background-color: #759A4A; }
 
 * {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box; }
+
+header #menu {
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  z-index: 100;
+  top: 0; }
+
+header #logo {
+  width: 6rem;
+  border-radius: 50%;
+  margin: 0.5rem; }
+
+.containerInformacion img {
+  width: 500px;
+  height: auto;
+  margin: auto; }
