--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,14 +13,22 @@
     .color-#{$color}{
         color: $val;
     }
-    
 }
+
 section {
     margin: auto;
     max-width: 1080px;
     height: auto;
     margin-top: 120px;
+    img {
+        height: 300px;
+        width: 200px;
+        object-fit: cover;
+    }
+    .card {
+        width: 13rem
 
+    }
 }
 
 a {
@@ -43,3 +51,4 @@ a {
     padding: 0.5rem 2rem;
     background-color: $colorGreen;
 }
+
