--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -8,8 +8,7 @@
 @import "base/typo";
 
 // // LAYOUT
-// @import "layout/aside";
-// @import "layout/footer";
+@import "layout/footer";
 @import "layout/header";
 
 // VIEWS
