--- a/scss/utilities/_variantes.scss
+++ b/scss/utilities/_variantes.scss
@@ -1,14 +1,14 @@
 // Font size
-$fonts: 'Poppins', sans-serif;
+$fonts: 'Oswald', sans-serif;
 $weight:("light":300, "regular":400, "bold":700);
 $size:("s":12px,"sm":16px,"md":24px,"lg":36px,"xlg":48px);
 // fontSizeEnd
 
 // Colors
-$color:("black":#0D270B,"white": #f4f4f4,"grey":#ffffff68,"green": #759A4A,"LightGreen":#a8df77,"bgGreen":#ECEDE6);
+$color:("black":#0D270B,"white": #f4f4f4,"green2":#759A4A34,"green": #759A4A,"LightGreen":#a8df77,"bgGreen":#ECEDE6);
 $colorBlack: #0D270B;
 $colorWhite: #f4f4f4;
-$colorGrey: #ffffff68;
+$colorGreen2: #759A4A34;
 $colorGreen: #759A4A;
 $colorLightGreen: #a8df77;
 $colorBgGreen: #ECEDE6;
