--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
 .Bg-ColorBgGreen {
   background-color: #ECEDE6; }
 
@@ -32,8 +32,8 @@
 .color-white {
   color: #f4f4f4; }
 
-.color-grey {
-  color: #ffffff68; }
+.color-green2 {
+  color: #759A4A34; }
 
 .color-green {
   color: #759A4A; }
@@ -49,11 +49,11 @@ section {
   max-width: 1080px;
   height: auto;
   margin-top: 120px; }
-  section img {
+  section .containerPromos img {
     height: 300px;
-    width: 200px;
+    width: 100%;
     object-fit: cover; }
-  section .card {
+  section .containerPromos .card {
     width: 13rem; }
 
 a {
@@ -70,13 +70,24 @@ a {
 
 .miBoton {
   padding: 0.5rem 2rem;
-  background-color: #759A4A; }
+  background-color: #759A4A;
+  color: #f4f4f4;
+  font-size: 1.2em;
+  border-radius: 5px; }
 
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Oswald", sans-serif;
   box-sizing: border-box; }
+
+.footer-container .logo-footer {
+  border-radius: 200px;
+  width: 60px;
+  height: 60px; }
+
+.footer-container i {
+  font-size: 30px; }
 
 header #menu {
   position: fixed;
@@ -85,12 +96,98 @@ header #menu {
   z-index: 100;
   top: 0; }
 
-header #logo {
+header .logo {
   width: 6rem;
   border-radius: 50%;
   margin: 0.5rem; }
 
-.containerInformacion img {
-  width: 500px;
+header .nav-item {
+  font-size: 1.2em; }
+
+.card-body {
+  background-color: #759A4A34; }
+
+.cbd-container {
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  border-right: 1px solid rgba(0, 0, 0, 0.125);
+  border-left: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 3rem 0; }
+  .cbd-container img {
+    width: 200px;
+    height: auto;
+    border-radius: 50%;
+    text-align: end; }
+  .cbd-container h6 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-align: end;
+    font-size: 1.5em; }
+
+.cbd-section-container {
   height: auto;
-  margin: auto; }
+  margin-left: 1.5rem;
+  font-weight: 200;
+  font-size: 1em; }
+
+.cbd-section {
+  margin-left: 1rem;
+  text-align: center;
+  width: 100%;
+  height: 100%; }
+
+.cbd-text {
+  font-size: 1.5em;
+  text-align: end; }
+
+.btn-beneficios {
+  font-size: 0.7em;
+  font-weight: 400;
+  border-style: none;
+  color: #0D270B; }
+  .btn-beneficios i {
+    font-size: 25px;
+    color: #759A4A; }
+
+.btn:focus {
+  box-shadow: none; }
+
+.carousel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 250px;
+  margin-bottom: 2rem;
+  font-weight: 200; }
+
+.texto-carousel {
+  width: 100%; }
+
+.carousel-inner {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  width: 60%; }
+
+.texto-carousel {
+  width: 100%;
+  margin: 0;
+  font-size: 1.7em; }
+
+.titulo-carousel {
+  text-align: center;
+  margin-bottom: 0;
+  padding-top: 2rem;
+  font-size: 1.5rem; }
+
+.carousel1 {
+  height: 50vh;
+  width: 100%; }
+
+.carousel-productos {
+  height: 100%;
+  width: auto;
+  background-color: none; }
