--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,16 +2,16 @@ header{
     #menu {
     position: fixed;
     width: 100%;
-    // min-height: 5rem;
     background-color: white;
-    // border: black 2px solid;
-    // box-shadow: 0 1px 20px -2px black;
     z-index: 100;
     top: 0;
     }
-    #logo {
+    .logo {
         width: 6rem;
         border-radius: 50%;
         margin: 0.5rem;
+    }
+    .nav-item{
+        font-size: 1.2em;
     }
 }
