--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -1,7 +1,102 @@
-.containerInformacion {
-    img {
-        width: 500px;
-        height: auto;
-        margin: auto;
+.cbd-container{
+    width: 100%;
+    height: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
+    border-right: 1px solid rgba(0, 0, 0, 0.125);
+    border-left: 1px solid rgba(0, 0, 0, 0.125);
+    padding: 3rem 0;
+        img{
+            width: 200px;
+            height: auto;
+            border-radius: 50%;
+            text-align: end;
+
+        }
+        h6{
+            font-size: 1.2rem;
+            font-weight: 600;
+            text-align: end;
+            font-size: 1.5em;  
+          }
     }
-}
+
+  .cbd-section-container{
+    height:auto;
+    margin-left: 1.5rem;
+    font-weight: 200;
+    font-size: 1em;
+  }
+
+  .cbd-section{
+    margin-left: 1rem;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .cbd-text{
+    font-size: 1.5em;
+    text-align: end;
+  }
+
+  .btn-beneficios{
+    font-size: 0.7em;
+    font-weight: 400;
+    border-style: none;
+    color: $colorBlack;
+    i{
+        font-size: 25px;
+        color: $colorGreen;
+      }
+  }
+  
+  .btn:focus{
+    box-shadow: none;
+  }
+  
+  .carousel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    margin-bottom: 2rem;
+    font-weight: 200;
+  }
+  
+  .texto-carousel{ 
+    width: 100%;
+  }
+  
+  .carousel-inner{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 60%;
+  }
+  
+  .texto-carousel{
+    width: 100%;
+    margin: 0;
+    font-size: 1.7em;
+  }
+  
+  .titulo-carousel{
+    text-align: center;
+    margin-bottom: 0;
+    padding-top: 2rem;
+    font-size: 1.5rem;
+  }
+
+  .carousel1{
+    height: 50vh;
+    width: 100%;
+  }
+  .carousel-productos{
+    height: 100%;
+    width: auto;
+    background-color: none;
+  }
+  
+ 
