--- a/scss/views/_productos.scss
+++ b/scss/views/_productos.scss
@@ -1,3 +1,17 @@
 .card-body {
     background-color: $colorGreen2;
 }
+section{
+
+    .containerPromos{
+        img {
+            // height: 300px;
+            // width: 100%;
+            object-fit: cover;
+        }
+    }
+    img {
+        height: 384px;
+        width: 288px;
+    }
+}
