--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -6,11 +6,9 @@
     border-left: 1px solid rgba(0, 0, 0, 0.125);
     padding: 3rem 0;
         img{
-            width: 200px;
-            height: auto;
+            width: 100%;
             border-radius: 50%;
-            text-align: end;
-
+            object-fit: cover;
         }
         h6{
             font-size: 1.2rem;
