--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -10,6 +10,7 @@
 // // LAYOUT
 @import "layout/footer";
 @import "layout/header";
+@import "layout/aside";
 
 // VIEWS
 @import "views/_productos.scss";
