--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -7,6 +7,7 @@
     padding: 3rem 0;
         img{
             width: 100%;
+            height: 100%;
             border-radius: 50%;
             object-fit: cover;
         }
