--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,8 +49,6 @@ section {
   max-width: 1080px;
   height: auto;
   margin-top: 170px; }
-  section .containerPromos .card {
-    width: 13rem; }
 
 a {
   color: #0D270B;
@@ -122,12 +120,10 @@ header .nav-item {
 .card-body {
   background-color: #759A4A34; }
 
-section .containerPromos img {
-  object-fit: cover; }
-
 section img {
   height: 384px;
-  width: 288px; }
+  width: 288px;
+  object-fit: cover; }
 
 .cbd-container {
   width: 100%;
@@ -136,16 +132,18 @@ section img {
   border-right: 1px solid rgba(0, 0, 0, 0.125);
   border-left: 1px solid rgba(0, 0, 0, 0.125);
   padding: 3rem 0; }
-  .cbd-container img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover; }
-  .cbd-container h6 {
-    font-size: 1.2rem;
-    font-weight: 600;
-    text-align: end;
-    font-size: 1.5em; }
+
+.cbd-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover; }
+
+.cbd-container h6 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: end;
+  font-size: 1.5em; }
 
 .cbd-section-container {
   height: auto;
@@ -168,9 +166,10 @@ section img {
   font-weight: 400;
   border-style: none;
   color: #0D270B; }
-  .btn-beneficios i {
-    font-size: 25px;
-    color: #759A4A; }
+
+.btn-beneficios i {
+  font-size: 25px;
+  color: #759A4A; }
 
 .btn:focus {
   box-shadow: none; }
@@ -192,7 +191,7 @@ section img {
   align-items: center;
   text-align: center;
   height: 100%;
-  width: 60%; }
+  width: 100%; }
 
 .texto-carousel {
   width: 100%;
@@ -213,3 +212,17 @@ section img {
   height: 100%;
   width: auto;
   background-color: none; }
+
+.carousel-control-next, .carousel-control-prev {
+  width: 150px;
+  border-style: none; }
+
+.carousel-item img {
+  width: 100%; }
+
+.img-inicio {
+  object-fit: cover;
+  height: 570px; }
+
+#carousel1 {
+  height: 100%; }
