--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -1,101 +1,103 @@
-.cbd-container{
+.cbd-container {
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  border-right: 1px solid rgba(0, 0, 0, 0.125);
+  border-left: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 3rem 0; }
+  .cbd-container img {
     width: 100%;
     height: 100%;
-    border-top: 1px solid rgba(0, 0, 0, 0.125);
-    border-right: 1px solid rgba(0, 0, 0, 0.125);
-    border-left: 1px solid rgba(0, 0, 0, 0.125);
-    padding: 3rem 0;
-        img{
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-        h6{
-            font-size: 1.2rem;
-            font-weight: 600;
-            text-align: end;
-            font-size: 1.5em;  
-          }
-    }
-
-  .cbd-section-container{
-    height:auto;
-    margin-left: 1.5rem;
-    font-weight: 200;
-    font-size: 1em;
-  }
-
-  .cbd-section{
-    margin-left: 1rem;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-  }
-
-  .cbd-text{
-    font-size: 1.5em;
+    border-radius: 50%;
+    object-fit: cover; }
+  .cbd-container h6 {
+    font-size: 1.2rem;
+    font-weight: 600;
     text-align: end;
-  }
+    font-size: 1.5em; }
 
-  .btn-beneficios{
-    font-size: 0.7em;
-    font-weight: 400;
-    border-style: none;
-    color: $colorBlack;
-    i{
-        font-size: 25px;
-        color: $colorGreen;
-      }
-  }
-  
-  .btn:focus{
-    box-shadow: none;
-  }
-  
-  .carousel{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 250px;
-    margin-bottom: 2rem;
-    font-weight: 200;
-  }
-  
-  .texto-carousel{ 
-    width: 100%;
-  }
-  
-  .carousel-inner{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    height: 100%;
-    width: 60%;
-  }
-  
-  .texto-carousel{
-    width: 100%;
-    margin: 0;
-    font-size: 1.7em;
-  }
-  
-  .titulo-carousel{
-    text-align: center;
-    margin-bottom: 0;
-    padding-top: 2rem;
-    font-size: 1.5rem;
-  }
+.cbd-section-container {
+  height: auto;
+  margin-left: 1.5rem;
+  font-weight: 200;
+  font-size: 1em; }
 
-  .carousel1{
-    height: 50vh;
-    width: 100%;
-  }
-  .carousel-productos{
-    height: 100%;
-    width: auto;
-    background-color: none;
-  }
-  
- 
+.cbd-section {
+  margin-left: 1rem;
+  text-align: center;
+  width: 100%;
+  height: 100%; }
+
+.cbd-text {
+  font-size: 1.5em;
+  text-align: end; }
+
+.btn-beneficios {
+  font-size: 0.7em;
+  font-weight: 400;
+  border-style: none;
+  color: #0D270B; }
+  .btn-beneficios i {
+    font-size: 25px;
+    color: #759A4A; }
+
+.btn:focus {
+  box-shadow: none; }
+
+.carousel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 250px;
+  margin-bottom: 2rem;
+  font-weight: 200; }
+
+.texto-carousel {
+  width: 100%; }
+
+.carousel-inner {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  width: 100%; 
+}
+
+.texto-carousel {
+  width: 100%;
+  margin: 0;
+  font-size: 1.7em; }
+
+.titulo-carousel {
+  text-align: center;
+  margin-bottom: 0;
+  padding-top: 2rem;
+  font-size: 1.5rem; }
+
+.carousel1 {
+  height: 50vh;
+  width: 100%; }
+
+.carousel-productos {
+  height: 100%;
+  width: auto;
+  background-color: none; }
+
+.carousel-control-next, .carousel-control-prev{
+  width: 150px;
+  border-style: none;
+}
+
+.carousel-item img{
+  width: 100%;
+}
+
+.img-inicio{
+ object-fit: cover;
+ height: 570px;
+}
+
+#carousel1{
+  height: 100%;
+}
