--- a/css/estilos.css
+++ b/css/estilos.css
@@ -120,7 +120,7 @@ header .nav-item {
 .card-body {
   background-color: #759A4A34; }
 
-section .productos img {
+.productos img {
   height: 384px;
   width: 288px;
   object-fit: cover; }
